--- a/PassingDataFromControllerToView/Views/Home/Index.cshtml
+++ b/PassingDataFromControllerToView/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@* @{
     Layout = null;
 }
 
@@ -16,6 +16,35 @@
         var student = ViewData["Student"] as PassingDataFromControllerToView.Models.Student;
     }
 
+    <div>
+        StudentId : @student?.StudentId
+    </div>
+    <div>
+        Name : @student?.Name
+    </div>
+    <div>
+        Branch : @student?.Branch
+    </div>
+    <div>
+        Section : @student?.Section
+    </div>
+    <div>
+        Gender : @student?.Gender
+    </div>
+</body>
+</html> *@
+
+@{
+    Layout = null;
+    var student = ViewBag.Student;
+}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@ViewBag.Title</title>
+</head>
+<body>
+    <h1>@ViewBag.Header</h1>
     <div>
         StudentId : @student?.StudentId
     </div>
